Fixes margin top gap error on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -1557,7 +1557,7 @@ ul.w3agile_footer_grid_list i.fa.fa-twitter{
     min-height: 200px;
 	}
 	.w3-agileits-about {
-    margin-top: 20em;
+    margin-top: 1em;
 	}
 }
 @media(max-width:800px){
@@ -1631,7 +1631,7 @@ div#bs-example-navbar-collapse-1 {
     right: 83px;
 	}
 	.w3-agileits-about {
-    margin-top: 23em;
+    margin-top: 2em;
 	}
 	.map iframe {
     height: 300px;
@@ -1644,9 +1644,6 @@ div#bs-example-navbar-collapse-1 {
 	}
 		.w3-border-bottom h3:after {
     right: 5%;
-	}
-	.w3-agileits-about {
-    margin-top: 20em;
 	}
 	.w3layouts_stats_left i {
     font-size: 2em;
@@ -1728,9 +1725,6 @@ div#bs-example-navbar-collapse-1 {
 	.w3layouts_stats_left {
     padding: 4em 0 4em 0;
 	}
-	.w3-agileits-about {
-    margin-top: 19em;
-	}
 	.banner-info h3 {
     font-size: 1em;
 	}
@@ -1755,14 +1749,11 @@ div#bs-example-navbar-collapse-1 {
 	.banner-bottom {
     bottom: -151%;
 	}
-	.w3-agileits-about {
-    margin-top: 25em;
-	}
 	.jislider__controller {
     bottom: 28%;
 	}
 	.w3-agileits-about h3, h3.tittle-agileits-w3layouts, .agileits_agile_contact_form h3, .w3-team-head h3, .services-heading h3 {
-    margin-bottom: 25px;
+    margin-bottom: 2px;
 	}
 	.w3-agileits-about-top p {
     width: 85%;
@@ -1850,16 +1841,6 @@ div#bs-example-navbar-collapse-1 {
 	.view {
     padding: 0.5em 1em 0 1em;
 	}
-	.w3-agileits-about {
-    margin-top:20em;
-	}
-	.w3-agileits-about {
-    padding: 3em 0;
-    margin-top: 6em;
-	}
-	.w3-agileits-about {
-    margin-top: 19em;
-	}
 	.banner-info h3 {
     font-size: 1em;
 	}
@@ -1878,9 +1859,6 @@ div#bs-example-navbar-collapse-1 {
     margin-bottom: 1em;
 	}
 
-	.w3-agileits-about {
-    margin-top: 54em;
-	}
 	.agileits-banner-info h3 {
     font-size: 1.8em;
     letter-spacing: 1px;
@@ -1898,9 +1876,6 @@ div#bs-example-navbar-collapse-1 {
     text-align: center;
     margin-bottom: 2em;
 	}
-	.w3-agileits-about {
-    padding: 5em 0 2em 0;
-	}
 	.w3layouts_stats_left p {
     font-size: 1.5em;
 	}
@@ -1915,9 +1890,6 @@ div#bs-example-navbar-collapse-1 {
 	}
 	.banner-bottom {
     bottom: -230%;
-	}
-	.w3-agileits-about {
-    margin-top: 40em;
 	}
 	.test-grid1 {
     padding: 1em 0.5em 0em 0.5em;
